--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase-admin": "^12.0.0",
     "mongoose": "^8.0.3",
+    "nodemailer": "^6.9.9",
     "nodemon": "^3.0.2"
   }
 }
