--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase-admin": "^12.0.0",
     "mongoose": "^8.0.3",
     "nodemailer": "^6.9.9",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "uuid": "^9.0.1"
   }
 }
