--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^8.0.3",
     "nodemailer": "^6.9.9",
     "nodemon": "^3.0.2",
+    "stripe": "^14.16.0",
     "uuid": "^9.0.1"
   }
 }
