printing and tables

--- a/config.env
+++ b/config.env
@@ -7,4 +7,5 @@ SMTP_HOST = smtp.gmail.com
 SMTP_PORT = 465
 SMTP_MAIL = servicesfoodie@gmail.com
 SMTP_PASSWORD = hxjlvwktgvytsoxr
+LINK = http://localhost:8080
 
